# bioinformatics-tools

./: .dockerignore  .env.example  .env.test  .gitignore  .readthedocs.yaml  Dockerfile  README.md  README_DEPLOYMENT.md  docker-compose.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: test.yml
bioinformatics_tools/: __init__.py
bioinformatics_tools/FileClasses/: BaseClasses.py  Fasta.py  Fastq.py  Generate.py  main.py
bioinformatics_tools/Utilities/: ssh_sftp.py  ssh_slurm.py
bioinformatics_tools/api/: README.md  __init__.py  auth.py  database.py  main.py  models.py
bioinformatics_tools/caragols/: carp.py  clix.py  condo.py  logger.py  logging-config.yaml  session.py
bioinformatics_tools/fastaTools/: main.py
bioinformatics_tools/file_classes/: BAM.py  BaseClasses.py  BrowserExtensibleData.py  Fasta.py  Fastq.py  GeneTransferFormat.py  GeneralFeatureFormat.py  Generate.py  base_classes.py  class_skeleton.py  main.py
bioinformatics_tools/miscTools/: archive_files.py  cache_clean.py  extract_files.py  hello.sh  hola.sh  main.py  slurmfile.py
bioinformatics_tools/misc_tools/: main.py  test.py
bioinformatics_tools/utilities/: btssh.py  ssh_connection.py  ssh_sftp.py  ssh_slurm.py
bioinformatics_tools/workflow_tools/: bapptainer.py  example.smk  load_to_db.py  main.py  margie.smk  models.py  output_cache.py  programs.py  selftest.smk  workflow.py  workflow_registry.py
docs/: DOCKER_TESTING.md  K8S_LOCAL.md  K8S_PRODUCTION.md  LOCAL_DEV.md  conf.py  configuration.md  configuration.rst  contact.md  contact.rst  contribution.md  contribution.rst  environments.rst  extensions.md  extensions.rst  help.md  index.md  index.rst  logging.md  logging.rst  quick-start.md  roadmap-ideas.rst  task-runner-sftp-changes.md
docs/_static/: custom.css
k8s/: ingress-local.yaml  ingress-prod.yaml
scripts/: generate_selftest_db.py
test-files/: bad.fasta  example.fastq
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_clix.py  test_clix_simple.py  test_fasta.py  test_workflow.py
(+30 files in other folders)
